# osm_art

./: .gitignore  .pre-commit-config.yaml  README.md  apply_name_selection.py  config.logging.yaml  config.yaml  convert_osm_to_svg.py  pyproject.toml
tests/: test_load_configs.py
utils/: utils.py  utils_bounds_dimensions.py  utils_log.py  utils_names.py  utils_osm.py  utils_scale.py  utils_utm.py
